fix: fix nested truncated variant

--- a/src/patternfly/components/ExpandableSection/expandable-section.scss
+++ b/src/patternfly/components/ExpandableSection/expandable-section.scss
@@ -130,6 +130,8 @@
   &.pf-m-truncate {
     --#{$expandable-section}--Gap: var(--#{$expandable-section}--m-truncate--Gap);
     --#{$expandable-section}__content--TransitionDelay--hide: 0s;
+    --#{$expandable-section}__content--Opacity: 1;
+    --#{$expandable-section}__content--TranslateY: 0;
 
     &:not(.pf-m-expanded) .#{$expandable-section}__content {
       // stylelint-disable
